# tiralabra-2022

./: .coveragerc  README.md  pyproject.toml  tasks.py
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: Viikkoraportti1.md  Viikkoraportti2.md  Viikkoraportti3.md  Viikkoraportti4.md  Viikkoraportti5.md  Viikkoraportti6.md
src/: alphabeta.py  arviointi.py  main.py  pelilooppi.py  ristinolla.py
src/tests/: alphabeta_test.py  ristinolla_test.py
