[tool.poetry]
name = "tiralabra-2022"
version = "0.1.0"
description = ""
authors = ["Essi Prykäri <essi.prykari@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pylint = "^2.13.0"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
